# dspy-demo

./: README.md  demo.ipynb  docker-compose.yml  evaluation.ipynb  main.py  pyproject.toml
