[project]
name = "dspy-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "arize-phoenix-otel>=0.12.1",
    "dspy[mcp]>=2.6.27",
    "openinference-instrumentation-dspy>=0.1.25",
    "openinference-instrumentation-litellm>=0.1.24",
    "pandas>=2.3.1",
    "tabulate>=0.9.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
